<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="itp341.wang.cherrie.parkhere.SignupActivity">

    <com.github.rahatarmanahmed.cpv.CircularProgressView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_view"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        app:cpv_indeterminate="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/userProfPicView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                fresco:placeholderImageScaleType="centerCrop"
                android:adjustViewBounds="true"
                fresco:placeholderImage="@drawable/placeholder_prof_pic"
                fresco:roundAsCircle="true"
                fresco:roundingBorderWidth="1dp"
                fresco:roundingBorderColor="@color/grey"/>

            <TextView
                android:text="@string/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/first"
                android:layout_marginTop="32dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTextFirst" />
            <TextView
                android:text="@string/last"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/editTextLast" />

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editTextEmail" />
            <TextView
                android:text="@string/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextPhone" />

            <TextView
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editTextPass" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_seeker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seeker"
                    android:onClick="onRadioButtonClicked"
                    android:buttonTint="@color/colorAccent"
                    android:layout_weight="1"/>
                <RadioButton android:id="@+id/radio_owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner"
                    android:buttonTint="@color/colorAccent"
                    android:onClick="onRadioButtonClicked"
                    android:layout_weight="1"/>
            </RadioGroup>

            <Button
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:gravity ="center"
                android:id="@+id/buttonEnter"
                android:layout_marginTop="32dp"/>

        </LinearLayout>
    </ScrollView>



</RelativeLayout>
