<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="itp341.wang.cherrie.parkhere.WelcomeActivity">
...
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:id="@+id/buttonLogin" />

    <Button
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:id="@+id/buttonSignup"
        android:layout_marginTop="32dp"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/buttonFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
