<resources>
    <string name="app_name">ParkHere</string>
    <!-- SignUp and Login Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="phone_num">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first">First Name:</string>
    <string name="last">Last Name:</string>
    <string name="owner">Owner</string>
    <string name="seeker">Seeker</string>
    <string name="password_invalid_signup">Password must have at least 10 characters long with one special character</string>
    <string name="facebook_app_id">1788111538080511</string>
    <string name="fb_login_protocol_scheme">fb1788111538080511</string>
    <!--ListOfPayments strings-->
    <string name="add_card_string">Add Card</string>

...
    <string name="dialog_title">Warning: You are not registered as an Owner</string>
    <string name="dialog_title_seeker">Warning: You are not registered as an Seeker</string>
    <string name="dialog_message">Only registered Owners can create listings. Would you like to sign up as an Owner?</string>
    <string name="dialog_message_seeker">Only registered Seekers can search and make bookings. Would you like to sign up as an Seekers?</string>

    <!--Floating Search Bar strings-->
    <string name="menu_advanced_string">Advanced</string>
    <string name="menu_filters_string">Filters</string>
    <string name="menu_latlong_string">LatLong Search</string>

    <!-- Settings strings-->
    <string name="dialog_title_payment">Authorize Payment</string>
    <string name="dialog_authorize">Your pending payments have been authorized</string>
...
