<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/dateButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:text="Select Date"/>

        <TextView
            android:id="@+id/fromDateTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="11/03/2016"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/toDateTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="11/03/2016"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Short Term Parking?"
            android:textSize="18sp"
            android:layout_marginStart="64dp"/>

        <CheckBox
            android:id="@+id/shortTermParkingCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:buttonTint="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/timeButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:text="Select Time"/>

        <TextView
            android:id="@+id/fromTimeTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="11:59 PM"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/toTimeTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="11:59 PM"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/coveredCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:layout_marginStart="72dp"
        android:text="Covered"/>

    <CheckBox
        android:id="@+id/suvCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:layout_marginStart="72dp"
        android:text="SUV"/>

    <CheckBox
        android:id="@+id/handicappedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:layout_marginStart="72dp"
        android:text="Handicapped"/>

    <CheckBox
        android:id="@+id/tandemCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorAccent"
        android:layout_marginStart="72dp"
        android:text="Tandem"/>

</LinearLayout>